# karl

./: .gitignore  CMakeLists.txt  LICENSE  README.en.md  README.md  a.karl  main.cpp
.cache/clangd/index/: main.cpp.B5CC0D01187E2E34.idx
.github/workflows/: action.yml  compile.yml
ast/: expr.cpp  expr.h  program.h  stmt.cpp  stmt.h
bytecode/: byte_code.cpp  byte_code.hpp  bytecode.cpp  bytecode.hpp  func_info.cpp  func_info.hpp  instruction.cpp  instruction.hpp  introduction.cpp  introduction.hpp
compiler/ast/: expr.cpp  expr.hpp  func_table.cpp  func_table.hpp  object_type.cpp  object_type.hpp  program.cpp  program.hpp  stmt.cpp  stmt.hpp  var_table.cpp  var_table.hpp
compiler/error/: error.cpp  error.hpp
compiler/generator/: generator.cpp  generator.hpp
compiler/lexer/: lexer.cpp  lexer.hpp  token.cpp  token.hpp
compiler/parser/: parser.cpp  parser.hpp
compiler/parser/lexer/: lexer.cpp  lexer.hpp  token.cpp  token.hpp
compiler/type_checker/: type_checker.cpp  type_checker.hpp
error/: error.cpp  error.hpp
evaluator/: environment.cpp  environment.h  evaluator.cpp  evaluator.h
lexer/: lexer.cpp  lexer.h  token.cpp  token.h
object/: object.cpp  object.h
parser/: parser.cpp  parser.h
shell/: shell.cpp  shell.hpp
vm/: frame.cpp  frame.hpp  heap.cpp  heap.hpp  native_func.cpp  native_func.hpp  object.cpp  object.hpp  vm.cpp  vm.hpp
